--- a/trunk/SeppukuWeb/Web.Config
+++ b/trunk/SeppukuWeb/Web.Config
@@ -56,18 +56,18 @@
 			<providers>
 				<clear/>
 				<add name="SqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="Seppuku" applicationName="SeppukuOnline"/>
-        <add name="DNMembershipProvider" type="DN.Core.DNMembershipProvider" connectionStringName="Seppuku"/>
+        <add name="DNMembershipProvider" type="Seppuku.Core.DNMembershipProvider" connectionStringName="Seppuku"/>
       </providers>
 		</membership>
 		<roleManager defaultProvider="DNRoleProvider" enabled="true" cacheRolesInCookie="true" cookieName=".SeppukuOnlineROLES">
 			<providers>
 				<clear/>
 				<add name="SqlRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="Seppuku" applicationName="SeppukuOnline"/>
-        <add name="DNRoleProvider" type="DN.Core.DNRoleProvider" connectionStringName="Seppuku"/>
+        <add name="DNRoleProvider" type="Seppuku.Core.DNRoleProvider" connectionStringName="Seppuku"/>
       </providers>
 		</roleManager>
 		<httpModules>
-      <add name="CurrentUser" type="DN.Core.CurrentUser"/>
+      <add name="CurrentUser" type="Seppuku.Core.CurrentUser"/>
       <add name="ScriptModule" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 			<!--Remove the default ASP.NET modules we don't need-->
 			<remove name="PassportAuthentication"/>
