--- a/trunk/SeppukuWeb/Web.Config
+++ b/trunk/SeppukuWeb/Web.Config
@@ -17,7 +17,7 @@
   <dataConfiguration defaultDatabase="Seppuku"/>
 	<connectionStrings>
 		<clear/>
-		<add name="Seppuku" connectionString="data source=(local)\SQLEXPRESS; Integrated Security=SSPI; initial catalog=Seppuku" providerName="System.Data.SqlClient"/>
+		<add name="Seppuku" connectionString="data source=(local); Integrated Security=SSPI; initial catalog=Seppuku" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 	<appSettings>
 	</appSettings>
